[tool.poetry]
name = "fart"
version = "0.1.0"
description = ""
authors = ["Litchi Pi <litchi.pi@proton.me>"]

[tool.poetry.dependencies]
python = "^3.9"
tcp_proxy = { git = "https://github.com/litchipi/tcp_proxy.git", branch = "main" }
requests = "^2.28.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
